--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -338,7 +338,7 @@
 
   </div>
 
-  <!-- Resources -->
+  <!-- 
   <h2>Resources</h2>
   <p>Here are some links to help you get started:</p>
 
@@ -368,7 +368,6 @@
 
   </div>
 
-  <!-- Next Steps -->
   <h2>Next Steps</h2>
   <p>What do you want to do next with your app?</p>
 
@@ -412,7 +411,7 @@
     </div>
   </div>
 
-  <!-- Terminal -->
+  
   <div class="terminal" [ngSwitch]="selection.value">
       <pre *ngSwitchDefault>ng generate component xyz</pre>
       <pre *ngSwitchCase="'material'">ng add @angular/material</pre>
@@ -422,7 +421,7 @@
       <pre *ngSwitchCase="'build'">ng build --prod</pre>
   </div>
 
-  <!-- Links -->
+
   <div class="card-container">
     <a class="circle-link" title="Animations" href="https://angular.io/guide/animations" target="_blank" rel="noopener">
       <svg id="Group_20" data-name="Group 20" xmlns="http://www.w3.org/2000/svg" width="21.813" height="23.453" viewBox="0 0 21.813 23.453">
@@ -499,9 +498,8 @@
         </g>
       </svg>
     </a>
-  </div>
-
-  <!-- Footer -->
+  </div> -->
+  <app-custom-form></app-custom-form>
   <footer>
       Love Angular?&nbsp;
       <a href="https://github.com/angular/angular" target="_blank" rel="noopener"> Give our repo a star.
